[package]

name = "leveldb"
version = "0.5.0"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]

name = "leveldb"

[dependencies]

db_key = "0.0.4"
libc = "*"

[dev-dependencies]
tempdir = "*"

[[test]]
name = "tests"
