[package]

name = "leveldb"
version = "0.7.0"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]

name = "leveldb"

[dependencies]

db-key = "0.0.5"
libc = "*"

[dev-dependencies]
tempdir = "0.3.0"

[[test]]
name = "tests"
